--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.stage.advancia</groupId>
   <artifactId>ANGULAR_SPRING_ORACLE</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
